--- a/docker_example/docker-compose.yml
+++ b/docker_example/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   langflow:
-    image: langflowai/langflow:latest # or another version tag on https://hub.docker.com/r/langflowai/langflow
+    image: langflowai/langflow:1.3.2 # Using the latest stable version
     pull_policy: always               # set to 'always' when using 'latest' image
     ports:
       - "7860:7860"
@@ -10,8 +10,12 @@ services:
       - LANGFLOW_DATABASE_URL=postgresql://langflow:langflow@postgres:5432/langflow
       # This variable defines where the logs, file storage, monitor data and secret keys are stored.
       - LANGFLOW_CONFIG_DIR=app/langflow
+      - LANGFLOW_HOST=0.0.0.0
+      - LANGFLOW_AUTO_INITIALIZE=true
     volumes:
       - langflow-data:/app/langflow
+    networks:
+      - langflow-network
 
   postgres:
     image: postgres:16
@@ -20,10 +24,16 @@ services:
       POSTGRES_PASSWORD: langflow
       POSTGRES_DB: langflow
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - langflow-postgres:/var/lib/postgresql/data
+    networks:
+      - langflow-network
 
 volumes:
   langflow-postgres:
   langflow-data:
+
+networks:
+  langflow-network:
+    driver: bridge
