--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-
 [project]
 name = "langflow"
 version = "1.3.2"
@@ -123,6 +122,7 @@ dependencies = [
     "langchain-ibm>=0.3.8",
     "opik>=1.6.3",
     "openai>=1.68.2",
+    "psycopg>=3.1,<4.0",
 ]
 
 [dependency-groups]
